--- a/web/Account Creation.xhtml
+++ b/web/Account Creation.xhtml
@@ -9,7 +9,7 @@ and open the template in the editor.
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>TODO supply a title</title>
+        <title>Think Inc Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
@@ -41,8 +41,8 @@ and open the template in the editor.
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
-                    <!--bootsfaces column medium offset is not working-->
-                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" col-md-offset="4" style="padding-right: 0 !important">
+                    <!--bootsfaces column medium offset is not working col-md-offset="3"-->
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Email:"/>
                     </b:column >
                     <b:column tiny-screen="6" medium-screen="7" large-screen="7">
@@ -51,7 +51,7 @@ and open the template in the editor.
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <h:outputText value="Username:" />
+                        <h:outputText value="Password" />
                     </b:column >
                     <b:column tiny-screen="6" medium-screen="7" large-screen="7">
                         <h:inputText/>
