Added create project button , project creation starting files

--- a/web/Account Creation.xhtml
+++ b/web/Account Creation.xhtml
@@ -59,7 +59,7 @@ and open the template in the editor.
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="12" medium-screen="12" large-screen="12">
-                        <b:button look="button" class="center-block" outcome="Account Landing" value="Create Account"/>
+                        <b:button look="button" class="center-block" value="Create Account"/>
                     </b:column>
                 </b:row>
             </b:container>
