--- a/web/Account Landing.xhtml
+++ b/web/Account Landing.xhtml
@@ -45,7 +45,10 @@ and open the template in the editor.
                     </b:column>    
                 </b:row>
                 <b:row>
-                    <b:column tiny-screen="12" medium-screen="12" large-screen="12">
+                    <b:column tiny-screen="6" medium-screen="6" large-screen="6">
+                        <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" style="margin-top:5% !important"/>
+                    </b:column>
+                    <b:column tiny-screen="6" medium-screen="6" large-screen="6">
                         <b:button look="button" value="Log Out" outcome="Login" class="center-block" style="margin-top:5% !important"/>
                     </b:column>
                 </b:row>
