Added password, and Ticket Landing

--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -17,6 +17,14 @@
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5">
                         <h:inputText value="Enter Username" />                   
                     </b:column>
+                    </b:row>
+                <b:row style="margin-top: 1%">
+                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                       <h:outputText value="Password:" /> 
+                    </b:column>
+                    <b:column tiny-screen="5" medium-screen="5" large-screen="5" >
+                        <h:inputSecret />                   
+                    </b:column>
 <!--                    <b:column tiny-screen="2" medium-screen="2" large-screen="2">
                         <a href="User">User</a>
                     </b:column>-->
