Changed button layout of account landing

--- a/web/Account Landing.xhtml
+++ b/web/Account Landing.xhtml
@@ -44,12 +44,12 @@ and open the template in the editor.
                       </ul>
                     </b:column>    
                 </b:row>
-                <b:row>
-                    <b:column tiny-screen="6" medium-screen="6" large-screen="6">
-                        <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" style="margin-top:5% !important"/>
+                <b:row style="margin-top:5% !important">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" />
                     </b:column>
-                    <b:column tiny-screen="6" medium-screen="6" large-screen="6">
-                        <b:button look="button" value="Log Out" outcome="Login" class="center-block" style="margin-top:5% !important"/>
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                        <b:button look="button" value="Log Out" outcome="Login" class="center-block" />
                     </b:column>
                 </b:row>
             </b:container>
