--- a/web/Ticket Landing.xhtml
+++ b/web/Ticket Landing.xhtml
@@ -8,11 +8,28 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <head>
+    <h:head>
         <title>Think Inc Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        
-    </body>
+    </h:head>
+    <h:body>
+        <h1 style="text-align:center">Ticket Landing</h1>
+        <b:container>
+            <b:row style="margin-top: 5%">                
+                <b:column tiny-screen="12" medium-screen="12" large-screen="12">
+                    <ul style="list-style-type: none; border: 2px solid black;">
+                        <h4 style="margin-top: 2%">Ticket Description:</h4>
+                        <li><h:outputText value="Inserted ticket description, details on what needs to be done." /></li>
+                        <li>Assigned Ticket to: <h:outputText value="Username" /></li>
+                        <li style="margin-bottom: 2%">Project Name: <h:outputText value="Project Name" /></li>
+                    </ul>
+                </b:column>
+            </b:row>
+            <b:row>               
+                    <b:column>
+                        
+                    </b:column>
+            </b:row>
+        </b:container>
+    </h:body>
 </html>
