Changed code in Project Creation and Account Landing

--- a/web/Account Landing.xhtml
+++ b/web/Account Landing.xhtml
@@ -38,9 +38,9 @@ and open the template in the editor.
                     <b:column tiny-screen="12" medium-screen="12" large-screen="12">
                       <ul style="list-style-type: none; width: 100% !important; margin-top: 5%">
                         <li style="font-weight: bold;border: 1px solid black">Tickets assigned to me:</li>
-                        <li style="border: 1px solid black">Ticket to Ride</li>
-                        <li style="border: 1px solid black">Golden Ticket</li>
-                        <li style="border: 1px solid black">Woodstock '69</li>
+                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Ticket to Ride</a></li>
+                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Golden Ticket</a></li>
+                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Woodstock '69</a></li>
                       </ul>
                     </b:column>    
                 </b:row>
