--- a/web/Project Creation.xhtml
+++ b/web/Project Creation.xhtml
@@ -47,7 +47,7 @@
                         <b:button look="button" class="center-block" outcome="Account Landing" value="Account Landing" />
                     </b:column>
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
-                        <b:button look="button" value="Create Ticket" outcome="Ticket Creation" class="center-block" />
+                        <b:button look="button" value="Create Project" outcome="Project Landing" class="center-block" />
                     </b:column>
                 </b:row>
             </b:container>
