Added Buttons in Ticket Landing

--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -32,21 +32,23 @@
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column  tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:button look="button" value="Sign Up" outcome="Account Creation" class="center-block" style="margin-top:1% !important;"/>
+                        <b:button look="button" value="Sign Up" outcome="Account Creation" class="center-block" style="margin-top:1% !important"/>
                     </b:column>
-                    <b:column  tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 0 !important" >
+                    <b:column  tiny-screen="2" medium-screen="2" large-screen="2" offset="3" style="padding-right: 0 !important; margin-left: 0 !important">
                         <b:button look="button" value="Sign In" outcome="Account Landing" class="center-block" style="margin-top:1% !important"/>
                     </b:column>
                 </b:row>
             </b:container>
         </h:form>
     </h:body>
-    <b:container>
-        <b:row>
-            <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 0 !important">
-                <h:outputLabel value="Think Inc 2016" style="text-align: center"  />
-            </b:column>
-        </b:row>
-    </b:container>
+    <footer>
+        <b:container>
+            <b:row>
+               <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-right: 0 !important; height: 3%; width: 100%">
+                    <h:outputLabel value="Think Inc 2016" style="text-align: center; position: fixed"  />
+                </b:column>
+            </b:row>
+        </b:container>
+    </footer>
 </html>
 
