--- a/web/Ticket Landing.xhtml
+++ b/web/Ticket Landing.xhtml
@@ -25,11 +25,13 @@ and open the template in the editor.
                     </ul>
                 </b:column>
             </b:row>
-            <b:row>               
-                    <b:column>
-                        
-                    </b:column>
+            <b:row>
+                <b:column tiny-screen="12" medium-screen="12" large-screen="12">
+                    <b:button look="button" value="Back to Account Landing" outcome="Account Landing.xhtml" class="center-block" style="margin-top:2% !important;" />
+                     <b:button look="button" value="Back to Project Landing" outcome="Project Landing.xhtml" class="center-block" style="margin-top:2% !important;"/>
+                </b:column>
             </b:row>
         </b:container>
+        
     </h:body>
 </html>
