--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
         <title>Think Inc Manager</title>
     </h:head>
@@ -16,7 +17,7 @@
                         <h:outputText value="Username:" /> 
                     </b:column>
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5">
-                        <h:inputText value="Enter Username" />                   
+                        <h:inputText a:placeholder="Enter Username" />                   
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
@@ -24,7 +25,7 @@
                         <h:outputText value="Password:" /> 
                     </b:column>
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5" >
-                        <h:inputSecret />                   
+                        <h:inputSecret a:placeholder="********"/>                   
                     </b:column>
                     <!--                    <b:column tiny-screen="2" medium-screen="2" large-screen="2">
                                             <a href="User">User</a>
