--- a/web/CreateAccount.xhtml
+++ b/web/CreateAccount.xhtml
@@ -54,7 +54,7 @@ and open the template in the editor.
                         <h:outputText value="Password" />
                     </b:column >
                     <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputText value="#{login.pass}"/>
+                        <h:inputSecret value="#{login.pass}"/>
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
@@ -62,7 +62,7 @@ and open the template in the editor.
                         <h:outputText value="Confirm Password: " />
                     </b:column >
                     <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputText value="#{login.pass2}"/>
+                        <h:inputSecret value="#{login.pass2}"/>
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
