--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -44,14 +44,16 @@ and open the template in the editor.
                       </ul>
                     </b:column>    
                 </b:row>
-                <b:row style="margin-top:5% !important">
-                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" />
-                    </b:column>
-                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
-                        <b:button look="button" value="Log Out" outcome="Login" class="center-block" />
-                    </b:column>
-                </b:row>
+                <h:form>
+                    <b:row style="margin-top:5% !important">
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                            <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" />
+                        </b:column>
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                            <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
+                        </b:column>
+                    </b:row>
+                </h:form>
             </b:container>
     </h:body>
 </html>
