--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -14,10 +14,10 @@
             <b:container>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <h:outputText value="Username:" /> 
+                        <h:outputText value="Email:" /> 
                     </b:column>
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5">
-                        <h:inputText a:placeholder="Enter Username" />                   
+                        <h:inputText a:placeholder="Enter Email" value="#{login.user}" />                   
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
@@ -25,7 +25,7 @@
                         <h:outputText value="Password:" /> 
                     </b:column>
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5" >
-                        <h:inputSecret a:placeholder="********"/>                   
+                        <h:inputSecret a:placeholder="********" value="#{login.pass}"/>                   
                     </b:column>
                     <!--                    <b:column tiny-screen="2" medium-screen="2" large-screen="2">
                                             <a href="User">User</a>
@@ -33,10 +33,10 @@
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column  tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:button look="button" value="Sign Up" outcome="CreateAccount" class="center-block" style="margin-top:1% !important"/>
+                        <h:commandButton  value="Sign In" action="#{login.doLogin()}" class="center-block" style="margin-top:1% !important"/>
                     </b:column>
                     <b:column  tiny-screen="2" medium-screen="2" large-screen="2" offset="3" style="padding-right: 0 !important; margin-left: 0 !important">
-                        <b:button look="button" value="Sign In" outcome="Account" class="center-block" style="margin-top:1% !important"/>
+                        <b:button look="button" value="Sign Up" outcome="CreateAccount" class="center-block" style="margin-top:1% !important"/>
                     </b:column>
                 </b:row>
             </b:container>
