Ticket class, create project method, create ticket method

--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -47,7 +47,7 @@ and open the template in the editor.
                 <h:form>
                     <b:row style="margin-top:5% !important">
                         <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                            <b:button look="button" class="center-block" outcome="Project Creation" value="Create Project" />
+                            <b:button look="button" class="center-block" outcome="CreateProject" value="Create Project" />
                         </b:column>
                         <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
                             <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
