--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -18,6 +18,7 @@ and open the template in the editor.
                 <b:row style="margin-top: 5%">  
                   <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
                    <ul style="list-style-type: none;">
+                       <li>ID: #{login.currentUser.id}</li>
                        <li>Username: #{login.currentUser.email}</li>
                        <li>First Name: #{login.currentUser.firstName}</li>
                     <li>Last Name: #{login.currentUser.lastName}</li>
