--- a/web/Project.xhtml
+++ b/web/Project.xhtml
@@ -1,12 +1,43 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <b:container>
+                <h1 style="text-align:center">#{login.currentUser.firstNameLastName()}</h1>
+                <b:row style="margin-top: 5%">  
+                  <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
+                   <ul style="list-style-type: none;">
+                       <li>ID: #{projects.currentProject.id}</li>
+                       <li>Name: #{projects.currentProject.projectName}</li>
+                       <li>Description: #{projects.currentProject.description}</li>
+                       <li>End Date: #{projects.currentProject.endDate}</li>
+                       <li>Start Date: #{projects.currentProject.startDate}</li>
+                       <li>Active: #{projects.currentProject.active}</li>
+                  </ul>
+                  </b:column>
+                  <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
+                   <ul style="list-style-type: none;">
+                    <li style="font-weight: bold;border: 1px solid black">Users on this project: </li>
+                    <li style="border: 1px solid black"><a href="Project Landing.xhtml">USER</a></li>
+                   </ul>
+                  </b:column>
+                </b:row>  
+                <h:form>
+                    <b:row style="margin-top:5% !important">
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                            <b:button look="button" class="center-block" outcome="" value="" />
+                        </b:column>
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                            <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
+                        </b:column>
+                    </b:row>
+                </h:form>
+            </b:container>
     </h:body>
 </html>
 
