--- a/web/Project.xhtml
+++ b/web/Project.xhtml
@@ -2,12 +2,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <b:container>
+        <h:form>
+            <b:container>
                 <h1 style="text-align:center">#{login.currentUser.firstNameLastName()}</h1>
                 <b:row style="margin-top: 5%">  
                   <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
@@ -23,21 +25,30 @@
                   <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
                    <ul style="list-style-type: none;">
                     <li style="font-weight: bold;border: 1px solid black">Users on this project: </li>
-                    <li style="border: 1px solid black"><a href="Project Landing.xhtml">USER</a></li>
+                    <ui:repeat var="u" value="#{projects.currentProject.users}">
+                        <li style="border: 1px solid black"><h:commandLink action="#{u.id}">#{u.firstNameLastName()} #{u.email}</h:commandLink></li>
+                    </ui:repeat>
                    </ul>
                   </b:column>
                 </b:row>  
-                <h:form>
-                    <b:row style="margin-top:5% !important">
-                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                            <b:button look="button" class="center-block" outcome="" value="" />
-                        </b:column>
-                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
-                            <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
-                        </b:column>
-                    </b:row>
-                </h:form>
+                
+                <b:row>
+                    <li style="font-weight: bold;border: 1px solid black">Tickets for this Project: </li>
+                    <ui:repeat var="t" value="#{projects.currentProject.tickets}">
+                        <li style="border: 1px solid black"><h:commandLink action="#{t.id}">#{t.description} #{t.dueDate} #{t.priority}</h:commandLink></li>
+                    </ui:repeat>
+                </b:row>
+                
+                <b:row style="margin-top:5% !important">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <b:button look="button" class="center-block" outcome="CreateTicket" value="Create New Ticket" />
+                    </b:column>
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                        <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
+                    </b:column>
+                </b:row>
             </b:container>
+        </h:form>
     </h:body>
 </html>
 
