--- a/web/CreateTicket.xhtml
+++ b/web/CreateTicket.xhtml
@@ -1,12 +1,66 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:b="http://bootsfaces.net/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <h:form>
+            <b:container>
+                <h1 style="text-align:center">Ticket Creation</h1>
+                <b:row style="margin-top: 2%">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <h:outputText value="Ticket Description:"/>
+                    </b:column >
+                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
+                        <h:inputText value="#{tickets.currentTicket.description}" />
+                    </b:column>
+                </b:row>
+                <b:row style="margin-top: 1%">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <h:outputText value="Start Date: " />
+                    </b:column >
+                    <b:column tiny-screen="6" medium-screen="7" large-screen="7" >
+                        <b:datepicker value="#{tickets.currentTicket.startDate}" />
+                    </b:column>
+                </b:row>
+                <b:row style="margin-top: 1%">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <h:outputText value="Due Date:"/>
+                    </b:column >
+                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
+                        <b:datepicker value="#{tickets.currentTicket.dueDate}" />
+                    </b:column>
+                </b:row>
+                <b:row style="margin-top: 2%">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <h:outputText value="Priority:"/>
+                    </b:column >
+                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
+                        <h:inputText value="#{tickets.currentTicket.priority}" />
+                    </b:column>
+                </b:row>
+                <b:row style="margin-top: 2%">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <h:outputText value="Level:"/>
+                    </b:column >
+                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
+                        <h:inputText value="#{tickets.currentTicket.level}" />
+                    </b:column>
+                </b:row>
+                
+                <b:row style="margin-top:5% !important">
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
+                        <b:button look="button" class="center-block" outcome="Back" value="Back to Projects" />
+                    </b:column>
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                        <h:commandButton  value="Create Ticket" action="#{tickets.createTicket('Project')}" class="center-block" />
+                    </b:column>
+                </b:row>
+            </b:container>
+        </h:form>
     </h:body>
 </html>
 
