JSF buttons fixes

--- a/web/CreateProject.xhtml
+++ b/web/CreateProject.xhtml
@@ -36,10 +36,10 @@
                 </b:row>
                 <b:row style="margin-top:5% !important">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:button look="button" class="center-block" outcome="Account Landing" value="Account Landing" />
+                        <h:commandButton  value="Back to Account" action="Account" class="center-block" />
                     </b:column>
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
-                        <h:commandButton  value="Create Project" action="#{projects.createProject('Account')}" class="center-block" />
+                        <h:commandButton  value="Create Project" action="#{projects.createProject('Project')}" class="center-block" />
                     </b:column>
                 </b:row>
             </b:container>
