--- a/web/CreateTicket.xhtml
+++ b/web/CreateTicket.xhtml
@@ -53,7 +53,7 @@
                 
                 <b:row style="margin-top:5% !important">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                        <b:button look="button" class="center-block" outcome="Back" value="Back to Projects" />
+                        <h:commandButton   class="center-block" action="Projects" value="Back to Projects" />
                     </b:column>
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
                         <h:commandButton  value="Create Ticket" action="#{tickets.createTicket('Project')}" class="center-block" />
