--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -25,7 +25,7 @@ and open the template in the editor.
                        <li>First Name: #{login.currentUser.firstName}</li>
                     <li>Last Name: #{login.currentUser.lastName}</li>
                     <li>Phone Number: #{login.currentUser.phoneNumber}</li>
-                    <li><b:button look="button" value="Change Password" class="center-block" style="margin-top:1% !important; float: left !important;"/></li>
+                    <li><b:button look="button" value="Edit" class="center-block" style="margin-top:1% !important; float: left !important;"/></li>
                   </ul>
                   </b:column>
                   <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
@@ -41,18 +41,18 @@ and open the template in the editor.
                     <b:column tiny-screen="12" medium-screen="12" large-screen="12">
                       <ul style="list-style-type: none; width: 100% !important; margin-top: 5%">
                         <li style="font-weight: bold;border: 1px solid black">Tickets assigned to me:</li>
-                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Ticket to Ride</a></li>
-                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Golden Ticket</a></li>
-                        <li style="border: 1px solid black"><a href="Ticket Landing.xhtml">Woodstock '69</a></li>
+                        <ui:repeat var="t" value="#{login.currentUser.tickets}">
+                            <li style="border: 1px solid black"><h:commandLink action="#{tickets.goToTicket(t.id)}">#{t.description} #{t.dueDate} #{t.priority}</h:commandLink></li>
+                        </ui:repeat>
                       </ul>
                     </b:column>    
                 </b:row>
                     <b:row style="margin-top:5% !important">
                         <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
-                            <b:button look="button" class="center-block" outcome="CreateProject" value="Create Project" />
+                            <h:commandButton  value="Create Project" action="CreateProject" class="center-block" />
                         </b:column>
                         <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
-                            <h:commandButton value="Log Out" action="#{login.doLogout()}" class="center-block" />
+                            <h:commandButton  value="Log Out" action="#{login.doLogout()}" class="center-block" />
                         </b:column>
                     </b:row>
             </b:container>
