Resolve null pointer on login, resolve no data in account on signup

--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -52,6 +52,9 @@ and open the template in the editor.
                             <h:commandButton  value="Create Project" action="CreateProject" class="center-block" />
                         </b:column>
                         <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                            <h:commandButton  value="Back to Account" action="Account" class="center-block" />
+                        </b:column>
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
                             <h:commandButton  value="Log Out" action="#{login.doLogout()}" class="center-block" />
                         </b:column>
                     </b:row>
