Resolve null pointer on login, resolve no data in account on signup

--- a/web/Project.xhtml
+++ b/web/Project.xhtml
@@ -44,6 +44,9 @@
                         <h:commandButton value="Create New Ticket" action="CreateTicket" class="center-block" />
                     </b:column>
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
+                        <h:commandButton value="Back to Account" action="Account"  />
+                    </b:column>
+                    <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-left: 7% !important">
                         <h:commandButton value="Log Out" action="#{login.doLogout()}"  />
                     </b:column>
                 </b:row>
