--- a/web/Login.xhtml
+++ b/web/Login.xhtml
@@ -27,9 +27,6 @@
                     <b:column tiny-screen="5" medium-screen="5" large-screen="5" >
                         <h:inputSecret a:placeholder="********" value="#{login.pass}"/>                   
                     </b:column>
-                    <!--                    <b:column tiny-screen="2" medium-screen="2" large-screen="2">
-                                            <a href="User">User</a>
-                                        </b:column>-->
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column  tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
@@ -42,14 +39,8 @@
             </b:container>
         </h:form>
     </h:body>
-    <footer>
-        <b:container>
-            <b:row>
-               <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important; margin-right: 0 !important; height: 3%; width: 100%">
-                    <h:outputLabel value="Think Inc 2016" style="text-align: center; position: fixed"  />
-                </b:column>
-            </b:row>
-        </b:container>
-    </footer>
+    <b:navBar fixed="bottom" class="text-center">
+        <h:outputText value="@2016 ThinkInc"  />
+    </b:navBar>
 </html>
 
