--- a/web/CreateAccount.xhtml
+++ b/web/CreateAccount.xhtml
@@ -13,31 +13,33 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </h:head>
     <h:body>
-         <h1 style="text-align:center">Account Creation</h1>
+         <b:navBar fixed="top" class="text-center">
+          <h1 style="text-align:center">Account Creation</h1>
+        </b:navBar>
         <h:form>
             <b:container>
-                <b:row style="margin-top: 2%">
+                <b:row style="margin-top:12%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Email:"/>
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputText value="#{login.user}" />
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3">
+                        <b:inputText value="#{login.user}" />
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="First Name: " />
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7" >
-                        <h:inputText value="#{login.firstName}" />
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3" >
+                        <b:inputText value="#{login.firstName}" />
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Last Name:"/>
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputText value="#{login.lastName}" />
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3">
+                        <b:inputText value="#{login.lastName}" />
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
@@ -45,32 +47,35 @@ and open the template in the editor.
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Phone Number:"/>
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputText value="#{login.phoneNumber}" />
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3">
+                        <b:inputText value="#{login.phoneNumber}" />
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Password" />
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputSecret value="#{login.pass}"/>
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3">
+                        <b:inputSecret value="#{login.pass}"/>
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Confirm Password: " />
                     </b:column >
-                    <b:column tiny-screen="6" medium-screen="7" large-screen="7">
-                        <h:inputSecret value="#{login.pass2}"/>
+                    <b:column tiny-screen="3" medium-screen="3" large-screen="3">
+                        <b:inputSecret value="#{login.pass2}"/>
                     </b:column>
                 </b:row>
                 <b:row style="margin-top: 1%">
                     <b:column tiny-screen="12" medium-screen="12" large-screen="12">
-                        <h:commandButton  class="center-block" action="#{login.doSignup()}" value="Create Account"/>
+                        <b:commandButton  class="center-block" action="#{login.doSignup()}" value="Create Account" look="danger"/>
                     </b:column>
                 </b:row>
             </b:container>
         </h:form>
+        <b:navBar fixed="bottom" class="text-center">
+        <h4 style="text-align:center">Hello from Think Inc.</h4>
+        </b:navBar>
     </h:body>
 </html>
